frontend/test/should_pass/nested_pattern_001.grg
test t {
	*(.-->.<--.;)
	+(.-->.<--.;)
	?(.-->.<--.;)
	(.-->.<--.;|.<--.-->.;) 
	~(.<--.-->.; ~(n:Node-->.-->n;))
	&(.-->.<--.; &(n:Node-->.-->n;))
}

rule r {
	*(.-->n:Node<--.; modify {n--n;})
	+(.-->n:Node<--.; modify {n--n;})
	?(.-->n:Node<--.; modify {n--n;})
	(.-->n:Node<--.; modify {n--n;} | .<--n:Node-->.;  modify {n-->n;}) 
	~(.<--n:Node-->.; ~(m:Node-->.-->m;))
	&(.-->n:Node<--.; &(m:Node-->.-->m;))
	
	modify {
		n:Node-->.-->n;
	}
}
