frontend/test/should_fail/delretypesame_004c.grg
rule r{	n:Node;	p1:P1(n);	p2:P2(n);	modify {		p1();		p2();	}}pattern P1(n:Node){		modify {		delete(n);	}}pattern P2(n:Node){	modify {		m:Node<n>;	}}